Tue Sep 14 12:01:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/FlReactor/ace_flreactor.mpc:
        * ace/FoxReactor/ace_foxreactor.mpc:
        * ace/QtReactor/ace_qt3reactor.mpc:
        * ace/QtReactor/ace_qt4reactor.mpc:
        * ace/TkReactor/ace_tkreactor.mpc:
        * ace/XtReactor/ace_xtreactor.mpc:
        * ace/ace_flreactor.mpc:
        * ace/ace_foxreactor.mpc:
        * ace/ace_qt3reactor.mpc:
        * ace/ace_qt4reactor.mpc:
        * ace/ace_tkreactor.mpc:
        * ace/ace_xtreactor.mpc:
          Moved these files to the subdirectory they need to be in

Tue Sep 14 11:40:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/Array.pl:
        * bin/Array_Helper:
        * bin/Hash_Map_Manager.pl:
        * bin/Hash_Map_Manager_Helper:
        * bin/vxworks_modify.pl:
          Removed these files, very old and will not work at all

        * bin/PythonACE:
        * bin/PythonACE/__init__.py:
        * bin/PythonACE/fuzz:
        * bin/PythonACE/fuzz/__init__.py:
        * bin/PythonACE/fuzz/_fuzz.py:
        * bin/PythonACE/fuzz/_generic_handler.py:
        * bin/PythonACE/fuzz/_mailer.py:
        * bin/PythonACE/fuzz/_path.py:
        * bin/PythonACE/fuzz/_singleton.py:
        * bin/PythonACE/fuzz/_types.py:
        * bin/PythonACE/fuzz/_warning_handler.py:
        * bin/PythonACE/fuzz/check_includes.py:
        * bin/PythonACE/fuzz/check_no_tabs.py:
        * bin/PythonACE/fuzz/cpp_inline.py:
        * bin/PythonACE/fuzz/inline.py:
        * bin/PythonACE/fuzz/math_include.py:
        * bin/PythonACE/fuzz/max_filename.py:
        * bin/PythonACE/fuzz/max_project_len.py:
        * bin/PythonACE/fuzz/newline.py:
        * bin/PythonACE/fuzz/no_conflict_markers.py:
        * bin/PythonACE/fuzz/noncvs.py:
        * bin/PythonACE/fuzz/ptr_arith_t.py:
        * bin/PythonACE/fuzz/refcountservantbase.py:
        * bin/PythonACE/fuzz/streams_include.py:
        * bin/PythonACE/fuzz/verify_changelog.py: